# InsightX

./: .gitignore  Cargo.toml  README.md
services/log-collector/: Cargo.toml
services/log-collector/src/: awscloudwatch.rs  azurelog.rs  config.rs  docker_ingestion.rs  file_ingestion.rs  forwarder.rs  googlelog.rs  http_handler.rs  kafka_ingestion.rs  main.rs  models.rs  syslog_ingestion.rs  tcp_ingestion.rs  udp_ingestion.rs
services/log-processor/: Cargo.toml
services/log-processor/src/: config.rs  forwarder.rs  http_handler.rs  main.rs  models.rs  processor.rs
services/query-service/: Cargo.toml
services/storage-servic/: Cargo.toml
