[package]
name = "log-collector"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12.12", features = ["json"] } # HTTP client to send logs
lz4_flex = "0.11.3"  # Compression
dotenv = "0.15"
