[package]
name = "log-collector"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12.12", features = ["json"] } # HTTP client to send logs
lz4_flex = "0.11.3"  # Compression
dotenv = "0.15"
zstd = "0.13"
bytes = "1.5"
chrono = { version = "0.4", features = ["serde"] }
notify = "8.0.0" 
bollard = "0.18.1"
futures-util = "0.3"
rusoto_core = "0.48.0"
rusoto_logs = "0.48.0"
google_cloud_logging = "0.1.0"
azure_svc_datalakeanalytics = "0.21.0"
