[package]
name = "log-processor"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = "0.8.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
dotenv = "0.15"
anyhow = "1.0"
hyper = "1.6.0"
axum-server="0.7.0"
lz4_flex = "0.11.3"  # Compression